Switch API URL to local development server

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://krushant-rsvp-backend.azurewebsites.net
-#REACT_APP_API_URL=http://localhost:5001
+#REACT_APP_API_URL=https://krushant-rsvp-backend.azurewebsites.net
+REACT_APP_API_URL=http://localhost:5001
